Fix description text wrap

--- a/styles.css
+++ b/styles.css
@@ -1,60 +1,11 @@
 body {
     font-family: Arial, sans-serif;
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%;
-    padding: 0;
-}
-
-.navbar {
-    background-color: #333;
-    overflow: hidden;
-    position: sticky;
-    top: 0;
-    z-index: 1000; /* Ensure the navbar stays above other content */
-}
-
-.navbar ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-
-.navbar li {
-    flex: 1;
-}
-
-.navbar a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-.navbar a:hover {
-    background-color: #111;
-}
-
-#home, #about, #services, #contact {
-    padding: 20px;
-    margin: 20px;
-    border: 1px solid #ccc;
-}
-
-div {
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
 .flex-container {
   display: flex;
   align-items: center;
-}
-
-img {
-  max-width: 100%;
-  max-height: 100%
+  justify-content: space-between;
 }
